--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname">
         <h3>How was your day?</h3>
-        <select name="" id="">
+        <select name="test" id="test">
             <option value="Good">Good</option>
             <option value="Bad">Bad</option>
 
