Add audio and video

--- a/index.html
+++ b/index.html
@@ -29,25 +29,30 @@
         <main>This is the main paragraph of the page</main>
         <hr>
         <p><em>Second</em> paragraph</p><br>
-        <p><i>Third</i> paragraph</p>
+        <p><i>Unfinished</i> Business</p>
     </div>
     <div>
         <ul>
-            <li><strong>first</strong></li>
-            <li><strong>second</strong></li>
-            <li><strong>third</strong></li>
+            <li><strong>Stand Up</strong></li>
+            <li><strong>Ice Breaker</strong></li>
+            <li><strong>Tech stack</strong></li>
         </ul>
     </div>
+    <h2>New Things</h2>
     <section>
         <div>
             <ol>
-                <li><b>ordered</b> #1</li>
-                <li><b>ordered</b> #2</li>
-                <li><b>ordered</b> #3</li>
+                <li><b>New Member</b> #1</li>
+                <li><b>Birthday</b> #2</li>
+                <li><b>Investors</b> #3</li>
             </ol>
         </div>
 
     </section>
+    <form>
+        <textarea name="temp" id="temp" cols="30" rows="10">Additional Comments!
+        </textarea>
+    </form>
     <details>
         <summary>Summary</summary>
         <p>This is the extended version of the summary!</p>
@@ -80,7 +85,17 @@
         </textarea>
     <br>
     <button>Submit</button>
-    <img src="./screenshots/example.png" alt="">
+    <img src="./screenshots/STD_HotelReservation.jpg" alt="">
+        <br>
+    <audio controls>
+        <source src="birds-singing_nature-sound-145453.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <br>
+    <video width="320" height="240" controls>
+        <source src="pexels-cup-of-couple-7301687-1080x1920-50fps.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
     <footer>Footer</footer>
 </body>
 
