--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800;900&display=swap" rel="stylesheet">
     <title>Team First Brainstorm</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="mystyle.css">
+    <style>
+        body {
+          background-color: linen;
+        }
+        
+        h1 {
+          color: maroon;
+          margin-left: 40px;
+        }
+        </style>
 </head>
 
 <body>
-    <h1>Team First Brainstorm</h1>
-    <h2>Check-ins</h2>
+    <h1 style="color:blue;text-align:center;">Team First Brainstorm</h1>
+    <h2 class="first">Check-ins</h2>
     <h3>Date: 04/16/2023</h3>
-    <h3>Members</h3>
+    <h3 id="second">Members</h3>
     <ul>
         <li>Jimmy</li>
         <li>Jimbo</li>
